--- a/css/style.css
+++ b/css/style.css
@@ -9707,7 +9707,7 @@ h4, h5, h6 {
 }
 
 .bg-gallery {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/webar.jpg), no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/webar.webp), no-repeat center center;
   background-size: cover;
 }
 
