--- a/little-planet/style.css
+++ b/little-planet/style.css
@@ -21,6 +21,18 @@ button:last-of-type {
   bottom: 20px;
   top: auto;
 }
+
+@media screen and (max-width: 350px) {
+  button:first-of-type {
+    left: 5px;
+    font-size: small;
+  }
+  button:last-of-type {
+    right: 5px;
+    font-size: small;
+  }
+}
+
 container {
   width: 100%;
   height: 100%;
