--- a/css/style.css
+++ b/css/style.css
@@ -4019,7 +4019,7 @@ input[type="button"].btn-block {
 
 .navbar {
   position: relative;
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -9551,10 +9551,16 @@ h4, h5, h6 {
 .scroll-to-bottom {
   position: fixed;
   width: 20px;
-  left: calc(50% - 35px);
+  left: calc(50% - 20px);
   bottom: 30px;
   z-index: 11;
   animation: action 1s infinite alternate;
+}
+
+@media screen and (max-width: 750px) {
+  .scroll-to-bottom {
+    left: calc(50% - 27px);
+  }
 }
 
 .back-to-top {
