--- a/little-planet/style.css
+++ b/little-planet/style.css
@@ -2,14 +2,8 @@ html {
   overflow: hidden;
 }
 button {
-  /* background: rgba(0, 0, 0, 0.7);
-  color: white; */
   position: absolute;
   top: 50px;
-  /* padding: 10px 20px; */
-  /* border: none;
-  border-radius: 5px;
-  transition: opacity 0.3s; */
 }
 button:first-of-type {
   left: 10px;
@@ -33,7 +27,7 @@ button:last-of-type {
   }
 }
 
-container {
+#container {
   width: 100%;
   height: 100%;
   overflow: hidden;
